welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:90: error: Unit does not take parameters
demis()
     ^